--- a/config/config.ini
+++ b/config/config.ini
@@ -26,7 +26,7 @@ mp4格式重新编码为h264 = 否
 生成时间字幕文件 = 否
 是否录制完成后执行自定义脚本 = 否
 自定义脚本执行命令 = 
-使用代理录制的平台(逗号分隔) = tiktok, sooplive, pandalive, winktv, flextv, popkontv, twitch, liveme, showroom, chzzk, shopee, shp, youtu
+使用代理录制的平台(逗号分隔) = tiktok, sooplive, pandalive, winktv, flextv, popkontv, twitch, liveme, showroom, chzzk, shopee, shp, youtube, chaturbate
 额外使用代理录制的平台(逗号分隔) = 
 
 [推送配置]
@@ -113,6 +113,7 @@ migu_cookie =
 lianjie_cookie =
 laixiu_cookie =
 picarto_cookie =
+chaturbate_cookie =
 
 
 [Authorization]
