feat: 引入转码并发信号量以控制转换任务，并扩展MP4转换支持MKV和FLV格式。

--- a/config/config.ini
+++ b/config/config.ini
@@ -23,6 +23,7 @@ language(zh_cn/en) = zh_cn
 录制完成后自动转为mp4格式 = 是
 mp4格式重新编码为h264 = 否
 追加格式后删除原文件 = 是
+同时转码的视频数量 = 3
 生成时间字幕文件 = 否
 是否录制完成后执行自定义脚本 = 否
 自定义脚本执行命令 = 
